--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,7 +1,13 @@
 [/Script/EngineSettings.GeneralProjectSettings]
-ProjectID=9728990843806C988587248B275C76E3
-ProjectName=First Person BP Game Template
+ProjectID=B5C7A63C489260B4B049DC844E195844
+ProjectName=DFoundryFX_Example
+CopyrightNotice=DarknessFX
+Homepage="https://github.com/DarknessFX/DFoundryFX_Example"
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 BuildConfiguration=PPBC_Development
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+bShareMaterialShaderCode=True
+bSharedMaterialNativeLibraries=True
 
